# rtmp-frame

./: .gitignore  Cargo.toml  README.md  cnofig.toml  config.toml  db.sql  dump_rtmp.sh  predict.db
model/: convert.bat
src/: main.rs
src/handler/: mod.rs  new_stream.rs  start_dump.rs  stop_dump.rs
src/predict/: div_predict.rs  mod.rs
src/process/: mod.rs  swim.rs
src/stream/: mod.rs
src/watcher/: mod.rs
tests/: md5_test.rs  new_file_test.rs  video_rs_test.rs
todo/: yoloAlert.json  yoloStart.json  yoloStop.json  设备推送定频数据2.json
yolo_predict/: predict.py  requirements.txt
yolo_predict/tests/: test_main.py
yolo_predict/yolo_predict/: __main__.py  dump.py  dump_cv.py  msg.py  utils.py
